@@ -147,7 +147,7 @@ int dns_resolvconfrewrite(str *out)
 }
 
 #ifdef SELFTEST_MAIN
-static int dummy(struct dns_transmit* tx, str* out, const char* fn)
+static int dummy(struct dns_transmit* tx, struct dns_result* out, const char* fn)
 {
   return 0;
   (void)tx;
@@ -156,7 +156,7 @@ static int dummy(struct dns_transmit* tx, str* out, const char* fn)
 }
 MAIN
 {
-  str out = {0};
+  struct dns_result out = {0};
   str fqdn = {0};
   str rcfile = {0};
 
